Change horizontal centring to avoid line-wrapping at small screen sizes

--- a/assets/components/progressMessage/progressMessage.scss
+++ b/assets/components/progressMessage/progressMessage.scss
@@ -13,15 +13,16 @@
   top: 0;
   width: 100%;
   height: 100%;
+  text-align: center;
 
   .component-progress-message__dialog {
     font-size: 20px;
     line-height: 28px;
-    position: absolute;
+    position: relative;
+    display: inline-block;
     color: white;
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
 
     .component-progress-message__message {
       text-align: center;
